# FlClash-Patched

./: .gitignore  .gitmodules  Makefile  README.md  README_zh_CN.md  pubspec.yaml  setup.dart
.agents/: architecture.md  commands.md  project.md  rules.md  skills.md
.github/: release_template.md
.github/workflows/: build-release.yml  build.yaml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/common/: build.gradle.kts
android/core/: build.gradle.kts
android/gradle/: libs.versions.toml
android/service/: build.gradle.kts
arb/: intl_en.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb
core/: action.go  bride.c  bride.go  bride.h  bride_android.go  bride_ios.go  common.go  constant.go  go.mod  go.sum  hub.go  lib.go  lowmem.go  method.go  server.go
core/platform/: ios.go
core/tun/: ios.go  tun_android.go  tun_ios.go
ios/: BundleConfig.xcconfig
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/NECore/: Info.plist  NECore-Bridging-Header.h  NECoreBridge.h  (+3 more)
lib/: application.dart  main.dart  state.dart
linux/: CMakeLists.txt
patches/: 0001-Add-other-release-build-for-ARM64.patch  0001-Patch-actions.patch  0001-Remove-Firebase.patch  0002-Follow-latest-fastforge.patch  0003-Patch-action.patch  1938.patch  1996.patch  2018.patch  2055.patch  2056.patch  2057.patch  2058.patch
plugins/rust_api/rust/: Cargo.toml
plugins/rust_api/rust/src/: frb_generated.rs
plugins/rust_api/rust/src/api/: helper.rs  ipc.rs  mod.rs
test/: setup_test.dart
tool/: geodata.dart
windows/: CMakeLists.txt
(+272 files in other folders)
